# rwa-indexer

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml  Dockerfile
api/src/: builder.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs
api/src/api/: api_impl.rs  mod.rs
common/: Cargo.toml
common/src/: config.rs  db.rs  lib.rs  local_config.json  utils.rs
indexer/: Cargo.toml  Dockerfile
indexer/src/: account_updates.rs  ack.rs  config.rs  database.rs  lib.rs  main.rs  metrics.rs  stream.rs
indexer/src/error/: mod.rs
indexer/src/program_handlers/: mod.rs
indexer/src/program_handlers/asset_controller/: mod.rs
indexer/src/program_handlers/data_registry/: mod.rs
indexer/src/program_handlers/identity_registry/: mod.rs
indexer/src/program_handlers/policy_engine/: mod.rs
migration/: Cargo.toml  Dockerfile
migration/src/: lib.rs  m20220101_000001_init.rs  m20240226_180047_create_asset_controller.rs  m20240226_180544_create_data_registry.rs  m20240226_180606_create_identity_registry.rs  m20240226_180630_create_policy_engine.rs  m20240301_101641_create_inital_indices.rs
migration/src/model/: table.rs
rwa_types/: Cargo.toml  sqlx-data.json
rwa_types/src/: lib.rs  metrics.rs
rwa_types/src/dao/: mod.rs  types.rs
rwa_types/src/rapi/: accounts.rs  get_all_accounts.rs  get_rwa_accounts_by_mint.rs  mod.rs
tests/: Cargo.toml  README.md
tests/tests/data/accounts/get_all_accounts/: ApZaoG36eYaKuzHHMLDdQMBE8WBwjGKjQ7HwAQUi73TD  E2XnGXCFEugYLPRvfiVD8EQ8QHLFcymqA9dP4vBboWwP  JAsaNchAr87pwHCyccUa5CZyjx6swD1GWmBnYXUK3zVn  mZ7ZGCykdQgvDsmDuXFsrCcFS77NAQxQZGhHNWQYvPe
tests/tests/data/accounts/get_rwa_accounts_by_mint/: 8tAP4FDpFehdQVmwTqCoYtDehG863TJqnTKZYz6UPR6m  8wpRqZ5993g1ubygtgUgh3bw8VEfp4LV7VuofL51pa4S  ApZaoG36eYaKuzHHMLDdQMBE8WBwjGKjQ7HwAQUi73TD  ApfwesFjbtvR3qTXmRM8hGyQ9HiufRPsQQt5wUH9e8Uw  E2XnGXCFEugYLPRvfiVD8EQ8QHLFcymqA9dP4vBboWwP  EVfbhfNeH9TqcBVbr9TEGpQvKgR51vJSLiwZXvLoR7DG  Ea1yrC1xRXd6tWcHL4yhGRB31j6jTwdeqd3e9LHaYUwj  JAsaNchAr87pwHCyccUa5CZyjx6swD1GWmBnYXUK3zVn  mZ7ZGCykdQgvDsmDuXFsrCcFS77NAQxQZGhHNWQYvPe
tests/tests/integration_tests/: account_update_tests.rs  common.rs  main.rs
tests/tests/integration_tests/snapshots/: integration_tests__account_update_tests__get_rwa_accounts_by_mint.snap
tools/acc_forwarder/: Cargo.toml  README.md  test.scenario
tools/acc_forwarder/src/: lib.rs  main.rs
transformer/: .gitignore  Cargo.toml
transformer/src/: error.rs  lib.rs  program_handler.rs
transformer/src/programs/: mod.rs
transformer/src/programs/asset_controller/: mod.rs
transformer/src/programs/data_registry/: mod.rs
transformer/src/programs/identity_registry/: mod.rs
transformer/src/programs/policy_engine/: mod.rs
