[workspace]
members = [
    "migration",
    "tools/acc_forwarder",
    "streamer"
]

[package]
name = "rwa-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Helius Labs"]
homepage = "https://helius.dev"
license = "Apache-2.0"
keywords = ["solana", "rwa-indexer"]

resolver = "2"

[workspace.dependencies]
async-std = {version = "^1", features = ["attributes", "tokio1"]}
anyhow = "1.0.79"
borsh = "0.10.3"
bs58 = "0.4.0"
bytes = "1.3.0"
clap = {version = "4.1.4", features = ["derive", "cargo"]}
env_logger = "0.10.0"
enum-iterator = "1.2.0"
enum-iterator-derive = "1.1.0"
figment = {version = "0.10.9", features = ["env", "test", "json"]}
futures = "0.3.24"
flatbuffers = "23.1.21"
http = "0.2.8"
insta = {version = "1.34.0", features = ["json"]}
log = "0.4.17"
thiserror = "1.0.31"
lazy_static = "1.4.0"
light-poseidon = "0.2.0"
plerkle_messenger = {path = "das-plugin/1.17.x/plerkle_messenger", features = [
  "redis",
]}
plerkle_serialization = {path = "das-plugin/1.17.x/plerkle_serialization"}
reqwest = {version = "0.11.13", features = ["json"]}
sea-orm = {version = "0.10.6", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
  "mock",
]}
sea-query = {version = "0.28.1", features = ["postgres-array"]}
serde_json = "1.0.82"
serde = "1.0.140"
solana-program = "1.17.16"
solana-account-decoder = "1.17.16"
solana-client = "1.17.16"
solana-sdk = "=1.17.16"
solana-transaction-status = "1.17.16"
spl-token = {version = "4.0", features = ["no-entrypoint"]}
spl-token-2022 = {version = "1.0", features = ["no-entrypoint"]}
sqlx = {version = "0.6.2", features = [
  "macros",
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "offline",
  "json",
]}
tonic = "0.10.2"
tonic-build = "0.10.2"
tonic-health = "0.10.2"
tokio = {version = "1.23.0", features = ["full"]}
tokio-stream = {version = "0.1.14", features = ["io-util"]}
tracing = "0.1.35"
tracing-subscriber = {version = "0.3.16", features = [
  "json",
  "env-filter",
  "ansi",
]}
yellowstone-grpc-proto = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v1.12.0+solana.1.17.16" }
