[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { workspace = true }
enum-iterator = { workspace = true }
enum-iterator-derive = { workspace = true }

[dependencies.sea-orm-migration]
version = "0.10.6"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
