[package]
edition = "2021"
name = "rwa_types"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["json_types", "sql_types"]
json_types = ["serde", "serde_json"]
sql_types = ["sea-orm"]

[dependencies]
async-trait = {workspace = true}
transformer = {workspace = true}
borsh = {workspace = true}
borsh-derive = {workspace = true}
bs58 = {workspace = true}
cadence = {workspace = true}
cadence-macros = {workspace = true}
chrono = {workspace = true}
data_registry = { workspace = true }
futures = {workspace = true}
hex = {workspace = true}
indexmap = {workspace = true}
jsonpath_lib = {workspace = true}
log = {workspace = true}
mime_guess = {workspace = true}
num-derive = {workspace = true}
num-traits = {workspace = true}
reqwest = {workspace = true}
schemars = {workspace = true}
schemars_derive = {workspace = true}
sea-orm = {workspace = true, optional = true}
sea-query = {workspace = true}
serde = {workspace = true, optional = true}
serde_json = {workspace = true, optional = true}
solana-sdk = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
url = {workspace = true}
