[package]
name = "transformer"
description = "RWA program parsers, for asset controller, data & identity registry"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytemuck = { workspace = true }
plerkle_serialization = { workspace = true }
async-trait = { workspace = true }
bs58 = { workspace = true }
lazy_static = { workspace = true }
flatbuffers = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
asset_controller = { workspace = true }
data_registry = { workspace = true }
identity_registry = { workspace = true }
policy_engine = { workspace = true }
solana-sdk = { workspace = true }
spl-pod = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
solana-client = "1.17.20"
solana-transaction-status = "1.17.20"
solana-geyser-plugin-interface = "1.17.20"
serde_json="1.0.89"
