[package]
edition = "2021"
name = "acc_forwarder"
publish = false
version = "0.0.1"

[dependencies]
anyhow = {workspace = true}
bs58 = {workspace = true}
clap = {workspace = true}
env_logger = {workspace = true}
figment = {workspace = true}
flatbuffers = {workspace = true}
futures = {workspace = true}
log = {workspace = true}
plerkle_messenger = {workspace = true}
plerkle_serialization = {workspace = true}
reqwest = {workspace = true}
sea-orm = {workspace = true}
sea-query = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
solana-account-decoder = {workspace = true}
solana-client = {workspace = true}
solana-program = {workspace = true}
solana-sdk = {workspace = true}
solana-transaction-status = {workspace = true}
spl-token = {workspace = true}
sqlx = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tracing-subscriber = {workspace = true}
